--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astrobench-cli",
   "description": "JavaScript benchmarks in the web browser using Benchmark.js and Puppeteer",
-  "version": "1.0.2",
+  "version": "0.0.0-development",
   "author": {
     "name": "Ferdinand Prantl",
     "email": "prantlf@gmail.com",
@@ -58,7 +58,7 @@
     "serve-static": "1.14.1"
   },
   "devDependencies": {
-    "@prantlf/astrobench": "1.0.2",
+    "@prantlf/astrobench": "1.0.5",
     "eslint": "6.8.0",
     "eslint-config-standard": "14.1.0",
     "eslint-plugin-import": "2.20.0",
