--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "chalk": "3.0.0",
     "commander": "4.1.0",
     "connect": "3.7.0",
+    "fs-extra": "8.1.0",
     "puppeteer": "2.1.0",
     "puppeteer-firefox": "0.5.1",
     "serve-static": "1.14.1"
