--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "connect": "3.7.0",
     "fs-extra": "8.1.0",
     "puppeteer": "2.1.1",
-    "puppeteer-firefox": "0.5.1",
     "serve-static": "1.14.1"
   },
   "devDependencies": {
@@ -68,5 +67,8 @@
     "eslint-plugin-standard": "4.0.1",
     "nyc": "15.0.0",
     "test": "0.6.0"
+  },
+  "peerDependecies": {
+    "puppeteer-firefox": "0.5.1"
   }
 }
