chore: Test code coverage

--- a/package.json
+++ b/package.json
@@ -36,14 +36,18 @@
   },
   "scripts": {
     "lint": "eslint --fix bin/* lib/*.js 'test/**/*.js'",
-    "check": "nyc --silent node test/text-formatter && nyc --silent --no-clean node test/json-formatter && nyc --silent --no-clean node test/runner && nyc --silent --no-clean ./bin/astrobench && nyc report",
+    "check": "nyc --silent node test/text-formatter && nyc --silent --no-clean node test/json-formatter && nyc --silent --no-clean node test/runner && nyc --silent --no-clean ./bin/astrobench && nyc report && nyc check-coverage",
     "test": "npm run lint && npm run check"
   },
   "nyc": {
     "reporter": [
       "lcov",
-      "text"
-    ]
+      "text-summary"
+    ],
+    "branches": 50,
+    "lines": 90,
+    "functions": 90,
+    "statements": 90
   },
   "keywords": [
     "benchmark",
