chore: Add launcher for unit tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,15 @@
       "skipFiles": [
         "<node_internals>/**"
       ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Test Library",
+      "program": "${workspaceFolder}/test/checker",
+      "skipFiles": [
+        "<node_internals>/**"
+      ]
     }
   ]
 }
