feat: Check benchmark rersults against quality thresholds

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "lint": "eslint --fix bin/* lib/*.js 'test/**/*.js'",
-    "check": "nyc --silent node test/text-formatter && nyc --silent --no-clean node test/json-formatter && nyc --silent --no-clean node test/runner && nyc --silent --no-clean ./bin/astrobench && nyc report && nyc check-coverage",
+    "check": "nyc --silent node test/text-formatter && nyc --silent --no-clean node test/json-formatter && nyc --silent --no-clean node test/checker && nyc --silent --no-clean node test/runner && nyc --silent --no-clean ./bin/astrobench && nyc report && nyc check-coverage",
     "test": "npm run lint && npm run check"
   },
   "nyc": {
@@ -63,6 +63,7 @@
   },
   "devDependencies": {
     "@prantlf/astrobench": "1.1.0",
+    "@prantlf/jsonlint": "10.2.0",
     "eslint": "6.8.0",
     "eslint-config-standard": "14.1.0",
     "eslint-plugin-import": "2.20.1",
