--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "commander": "4.1.1",
     "connect": "3.7.0",
     "fs-extra": "8.1.0",
+    "progress": "2.0.3",
     "puppeteer": "2.1.1",
     "serve-static": "1.14.1"
   },
