--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astrobench-cli",
   "description": "JavaScript benchmarks in the web browser using Benchmark.js and Puppeteer",
-  "version": "0.0.0-development",
+  "version": "2.0.0",
   "author": {
     "name": "Ferdinand Prantl",
     "email": "prantlf@gmail.com",
